--- a/src/components/BoardSpaceSummary.scss
+++ b/src/components/BoardSpaceSummary.scss
@@ -3,14 +3,14 @@
     display: flex;
     flex-direction: column;
     .spacesSummaryMultiplierTotal, .spacesSummaryVoltorbTotal {
-      font-size: 1.65rem;
+      font-size: 1.65em;
       font-weight: 700;
       color: #333;
     }
     .spacesSummaryMultiplierTotal {
       flex: 0 0 40%;
-      padding: 0 0.4rem;
-      border-bottom: 0.4rem solid #fff;
+      padding: 0 0.4em;
+      border-bottom: 0.4em solid #fff;
       text-align: right;
     }
     .spacesSummaryVoltorbTotal {
@@ -19,9 +19,17 @@
       align-items: center;
       justify-content: center;
       img {
-        width: 2.4rem;
-        margin-right: 0.4rem;
+        width: 1.6em;
+        margin-right: 0.4em;
       }
+    }
+  }
+}
+
+@media screen and (min-width: 784px) {
+  .spacesSummaryVoltorbTotal {
+    img {
+      width: 2.4em;
     }
   }
 }
