--- a/src/components/VoltorbFlip.scss
+++ b/src/components/VoltorbFlip.scss
@@ -1,15 +1,16 @@
 .voltorbFlip {
+  .boardArea {
+    font-size: 2vw;
+  }
   .sidebar {
     padding: 0 0.6rem;
     .gameMenu {
       display: flex;
-      flex-direction: column-reverse;
+      flex-direction: row;
     }
     .controls {
       text-align: right;
       padding: 0.8rem 0;
-      .btn {
-      }
     }
   }
 }
@@ -18,8 +19,11 @@
   position: relative;
 }
 
-@media screen and (min-width: 700px) and (max-width: 1099px){
+@media screen and (min-width: 784px) and (max-width: 1099px){
   .voltorbFlip {
+    .boardArea {
+      font-size: initial;
+    }
     .sidebar {
       .gameMenu {
         flex-direction: row;
@@ -40,6 +44,9 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    .boardArea {
+      font-size: initial;
+    }
     .board {
       flex: 0 0 48rem;
     }
